--- a/blogicum/templates/includes/post_card.html
+++ b/blogicum/templates/includes/post_card.html
@@ -4,7 +4,7 @@
     <h6 class="card-subtitle mb-2 text-muted">
       <small>
         {{ post.pub_date|date:"d E Y" }} | {% if post.location and post.location.is_published %}{{ post.location.name }}{% else %}Планета Земля{% endif %}<br>
-        От автора @{{ post.author.username }} в категории {% include "includes/category_link.html" %}
+        От автора @{{ post.author.username }} в категории {% include "includes/category_link.html" with category=post.category %}
       </small>
     </h6>
     <p class="card-text">{{ post.text|truncatewords:10 }}</p>
